@@ -3,6 +3,8 @@ CHANGES.txt - 2008-07-14
 
 CHANGES IN CUPS V1.4b1
 
+	- Added an AccessLogLevel directive to cupsd.conf to control
+	  what is logged to the access_log file.
 	- The default LogLevel is now "warn" instead of "info" to reduce
 	  the amount of logging that is done to disk by default.
 	- The PPD compiler did not include OID query keywords in PPD
